--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 css?family=Poppins:200,300,400,500,600,700,800,900&display=swap'); */
 
 *{
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     box-sizing: border-box;
     font-family: sans-serif;
 
